--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,18 @@ name = "futures-prio"
 version = "0.1.0"
 authors = ["leo60228 <iakornfeld@gmail.com>"]
 edition = "2018"
+description = "Broadcasting futures mpmc channel"
+repository = "https://github.com/leo60228/futures-prio"
+homepage = "https://github.com/leo60228/futures-prio"
+readme = "README.md"
+keywords = ["futures", "priority", "combinator", "extension, "prio""]
+categories = ["asynchronous", "concurrency"]
+license = "MIT OR Apache-2.0"
+
+[badges]
+is-it-maintained-issue-resolution = { repository = "leo60228/futures-prio" }
+is-it-maintained-open-issues = { repository = "leo60228/futures-prio" }
+maintenance = { status = "experimental"}
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
